grammar/GParser.py
# Generated from G.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GParser ( Parser ):

    grammarFileName = "G.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "','", "']'", "'..'", "':'", "'='", 
                     "'func'", "'()'", "'->'", "'('", "')'", "'return'", 
                     "'if'", "'else if'", "'else'", "'for'", "'in'", "'while'", 
                     "'!'", "'**'", "'*'", "'/'", "'//'", "'%'", "'+'", 
                     "'-'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'&&'", "'||'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TYPE", "BOOL", 
                      "NUMBER", "IDENTIFIER", "WP", "COMMENT", "BLOCK_OPEN", 
                      "BLOCK_CLOSE", "STRING" ]

    RULE_string = 0
    RULE_boolean = 1
    RULE_number = 2
    RULE_primitive = 3
    RULE_listExpression = 4
    RULE_listAccess = 5
    RULE_listSlice = 6
    RULE_listAssignment = 7
    RULE_variableDefinition = 8
    RULE_functionDefinition = 9
    RULE_assignment = 10
    RULE_functionCall = 11
    RULE_returnStatement = 12
    RULE_ifStatement = 13
    RULE_elseIfStatement = 14
    RULE_elseStatement = 15
    RULE_forLoop = 16
    RULE_whileLoop = 17
    RULE_expression = 18
    RULE_listAccessBaseExpression = 19
    RULE_instruction = 20

    ruleNames =  [ "string", "boolean", "number", "primitive", "listExpression", 
                   "listAccess", "listSlice", "listAssignment", "variableDefinition", 
                   "functionDefinition", "assignment", "functionCall", "returnStatement", 
                   "ifStatement", "elseIfStatement", "elseStatement", "forLoop", 
                   "whileLoop", "expression", "listAccessBaseExpression", 
                   "instruction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    TYPE=35
    BOOL=36
    NUMBER=37
    IDENTIFIER=38
    WP=39
    COMMENT=40
    BLOCK_OPEN=41
    BLOCK_CLOSE=42
    STRING=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(GParser.STRING, 0)

        def getRuleIndex(self):
            return GParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = GParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(GParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(GParser.BOOL, 0)

        def getRuleIndex(self):
            return GParser.RULE_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = GParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_boolean)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(GParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(GParser.NUMBER, 0)

        def getRuleIndex(self):
            return GParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = GParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(GParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean(self):
            return self.getTypedRuleContext(GParser.BooleanContext,0)


        def number(self):
            return self.getTypedRuleContext(GParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(GParser.StringContext,0)


        def getRuleIndex(self):
            return GParser.RULE_primitive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitive" ):
                listener.enterPrimitive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitive" ):
                listener.exitPrimitive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive" ):
                return visitor.visitPrimitive(self)
            else:
                return visitor.visitChildren(self)




    def primitive(self):

        localctx = GParser.PrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_primitive)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.boolean()
                pass
            elif token in [GParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.number()
                pass
            elif token in [GParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.string()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.range_start = None # ExpressionContext
            self.range_end = None # ExpressionContext
            self.range_step = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_listExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpression" ):
                listener.enterListExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpression" ):
                listener.exitListExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListExpression" ):
                return visitor.visitListExpression(self)
            else:
                return visitor.visitChildren(self)




    def listExpression(self):

        localctx = GParser.ListExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listExpression)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(GParser.T__0)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GParser.T__0) | (1 << GParser.T__9) | (1 << GParser.T__18) | (1 << GParser.BOOL) | (1 << GParser.NUMBER) | (1 << GParser.IDENTIFIER) | (1 << GParser.STRING))) != 0):
                    self.state = 54
                    self.expression(0)


                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GParser.T__1:
                    self.state = 57
                    self.match(GParser.T__1)
                    self.state = 58
                    self.expression(0)
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 64
                self.match(GParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(GParser.T__0)
                self.state = 66
                localctx.range_start = self.expression(0)
                self.state = 67
                self.match(GParser.T__3)
                self.state = 68
                localctx.range_end = self.expression(0)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GParser.T__3:
                    self.state = 69
                    self.match(GParser.T__3)
                    self.state = 70
                    localctx.range_step = self.expression(0)


                self.state = 73
                self.match(GParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListAccessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.other = None # ListAccessContext
            self.expr = None # ListAccessBaseExpressionContext
            self.key = None # ExpressionContext
            self.list_slice = None # ListSliceContext

        def listAccessBaseExpression(self):
            return self.getTypedRuleContext(GParser.ListAccessBaseExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def listSlice(self):
            return self.getTypedRuleContext(GParser.ListSliceContext,0)


        def listAccess(self):
            return self.getTypedRuleContext(GParser.ListAccessContext,0)


        def getRuleIndex(self):
            return GParser.RULE_listAccess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAccess" ):
                listener.enterListAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAccess" ):
                listener.exitListAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAccess" ):
                return visitor.visitListAccess(self)
            else:
                return visitor.visitChildren(self)



    def listAccess(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GParser.ListAccessContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_listAccess, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 78
                localctx.expr = self.listAccessBaseExpression()
                self.state = 79
                self.match(GParser.T__0)
                self.state = 80
                localctx.key = self.expression(0)
                self.state = 81
                self.match(GParser.T__2)
                pass

            elif la_ == 2:
                self.state = 83
                localctx.expr = self.listAccessBaseExpression()
                self.state = 84
                self.match(GParser.T__0)
                self.state = 85
                localctx.list_slice = self.listSlice()
                self.state = 86
                self.match(GParser.T__2)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = GParser.ListAccessContext(self, _parentctx, _parentState)
                        localctx.other = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_listAccess)
                        self.state = 90
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 91
                        self.match(GParser.T__0)
                        self.state = 92
                        localctx.key = self.expression(0)
                        self.state = 93
                        self.match(GParser.T__2)
                        pass

                    elif la_ == 2:
                        localctx = GParser.ListAccessContext(self, _parentctx, _parentState)
                        localctx.other = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_listAccess)
                        self.state = 95
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 96
                        self.match(GParser.T__0)
                        self.state = 97
                        localctx.list_slice = self.listSlice()
                        self.state = 98
                        self.match(GParser.T__2)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ListSliceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.slice_start = None # ExpressionContext
            self.slice_end = None # ExpressionContext
            self.slice_step = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_listSlice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListSlice" ):
                listener.enterListSlice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListSlice" ):
                listener.exitListSlice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListSlice" ):
                return visitor.visitListSlice(self)
            else:
                return visitor.visitChildren(self)




    def listSlice(self):

        localctx = GParser.ListSliceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listSlice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GParser.T__0) | (1 << GParser.T__9) | (1 << GParser.T__18) | (1 << GParser.BOOL) | (1 << GParser.NUMBER) | (1 << GParser.IDENTIFIER) | (1 << GParser.STRING))) != 0):
                self.state = 105
                localctx.slice_start = self.expression(0)


            self.state = 108
            self.match(GParser.T__4)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GParser.T__0) | (1 << GParser.T__9) | (1 << GParser.T__18) | (1 << GParser.BOOL) | (1 << GParser.NUMBER) | (1 << GParser.IDENTIFIER) | (1 << GParser.STRING))) != 0):
                self.state = 109
                localctx.slice_end = self.expression(0)


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GParser.T__4:
                self.state = 112
                self.match(GParser.T__4)
                self.state = 113
                localctx.slice_step = self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr = None # ExpressionContext
            self.key = None # ExpressionContext
            self.value = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_listAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAssignment" ):
                listener.enterListAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAssignment" ):
                listener.exitListAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAssignment" ):
                return visitor.visitListAssignment(self)
            else:
                return visitor.visitChildren(self)




    def listAssignment(self):

        localctx = GParser.ListAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            localctx.expr = self.expression(0)
            self.state = 117
            self.match(GParser.T__0)
            self.state = 118
            localctx.key = self.expression(0)
            self.state = 119
            self.match(GParser.T__2)
            self.state = 120
            self.match(GParser.T__5)
            self.state = 121
            localctx.value = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def TYPE(self):
            return self.getToken(GParser.TYPE, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_variableDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDefinition" ):
                listener.enterVariableDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDefinition" ):
                listener.exitVariableDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDefinition" ):
                return visitor.visitVariableDefinition(self)
            else:
                return visitor.visitChildren(self)




    def variableDefinition(self):

        localctx = GParser.VariableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDefinition)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(GParser.IDENTIFIER)
                self.state = 124
                self.match(GParser.T__4)
                self.state = 125
                self.match(GParser.TYPE)
                self.state = 126
                self.match(GParser.T__5)
                self.state = 127
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(GParser.IDENTIFIER)
                self.state = 129
                self.match(GParser.T__4)
                self.state = 130
                self.match(GParser.TYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.return_type = None # Token

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def TYPE(self):
            return self.getToken(GParser.TYPE, 0)

        def variableDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.VariableDefinitionContext)
            else:
                return self.getTypedRuleContext(GParser.VariableDefinitionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = GParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(GParser.T__6)
                self.state = 134
                localctx.name = self.match(GParser.IDENTIFIER)
                self.state = 135
                self.match(GParser.T__7)
                self.state = 136
                self.match(GParser.T__8)
                self.state = 137
                localctx.return_type = self.match(GParser.TYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(GParser.T__6)
                self.state = 139
                localctx.name = self.match(GParser.IDENTIFIER)
                self.state = 140
                self.match(GParser.T__9)
                self.state = 141
                self.variableDefinition()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GParser.T__1:
                    self.state = 142
                    self.match(GParser.T__1)
                    self.state = 143
                    self.variableDefinition()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 149
                self.match(GParser.T__10)
                self.state = 150
                self.match(GParser.T__8)
                self.state = 151
                localctx.return_type = self.match(GParser.TYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(GParser.IDENTIFIER)
            self.state = 156
            self.match(GParser.T__5)
            self.state = 157
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GParser.ExpressionContext,i)


        def getRuleIndex(self):
            return GParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = GParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(GParser.IDENTIFIER)
                self.state = 160
                self.match(GParser.T__9)
                self.state = 161
                self.expression(0)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GParser.T__1:
                    self.state = 162
                    self.match(GParser.T__1)
                    self.state = 163
                    self.expression(0)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(GParser.T__10)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(GParser.IDENTIFIER)
                self.state = 172
                self.match(GParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = GParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(GParser.T__11)
            self.state = 176
            localctx.value = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):
